SEO and accessibility fixes for page2
Added page descriptions, added alt text to logo on page2, added padding around form entries, change color of link to homepage

--- a/style.css
+++ b/style.css
@@ -840,7 +840,9 @@ h4 {
 .bg-atlanta-20made-20sign-20orange {
     background-image: url("img/atlanta-made-sign-orange-small.jpg");
 }
-
+.form-group {
+    padding: 15px 0px;
+}
 @media (max-width: 1024px) {
     .bloc {
         padding-left: 20px;
