--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ a:hover {
 }
 
 .texture-paper::before {
-    background: url("img/texture-paper.png");
+    background: url("img/texture-paper.webp");
     background-size: 280px 280px;
 }
 
@@ -838,7 +838,7 @@ h4 {
 }
 
 .bg-atlanta-20made-20sign-20orange {
-    background-image: url("img/atlanta-made-sign-orange-small.jpg");
+    background-image: url("img/atlanta-made-sign-orange-small.webp");
 }
 .form-group {
     padding: 15px 0px;
