--- a/style.css
+++ b/style.css
@@ -834,7 +834,7 @@ h4 {
 }
 
 .bg-atlanta-20made-20sign {
-    background-image: url("img/atlanta-made-sign.webp");
+    background-image: url("img/atlanta-made-sign-lq.webp");
 }
 
 .bg-atlanta-20made-20sign-20orange {
