--- a/style.css
+++ b/style.css
@@ -841,7 +841,7 @@ h4 {
     background-image: url("img/atlanta-made-sign-orange-small.webp");
 }
 .form-group {
-    padding: 15px 0px;
+    padding: 0px 0px 30px 0px;
 }
 @media (max-width: 1024px) {
     .bloc {
